# llm-job-support-raspi-ver

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  AI-hanes-explain.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_web.ps1  run_web.sh
.claude/project/: .gitignore  .mcp.json  .worktreeinclude  CLAUDE.md
.claude/project/.claude/: settings.json
.claude/project/.claude/agents/: code-reviewer.md  planning-writer.md  prototype-builder.md  public-data-finder.md  rag-architect.md  vlm-researcher.md
.claude/project/.claude/commands/: demo-check.md  fix-issue.md  run.md
.claude/project/.claude/hooks/: block-secrets.sh  format-on-save.sh  session_start.py
.claude/project/.claude/mcp/: memory_server.py
.claude/project/.claude/output-styles/: teaching.md
.claude/project/.claude/rules/: api-design.md  frontend.md  rag.md  testing.md
.claude/project/.claude/skills/planning-report/: SKILL.md
.claude/project/.claude/skills/prototype-scaffold/: SKILL.md
.claude/project/.claude/skills/public-data-rag/: SKILL.md  checklist.md
.claude/project/.claude/skills/team-init/: SKILL.md
.claude/project/.claude/workflows/: daily-sync.js
backend/: README.md  __init__.py  _verify_ui.py  activity.py  app.py  auth.py  cache.py  projects.py  rag_engine.py  services.py  yolo_service.py
backend/ml/finetuning/: README.md  __init__.py  compare_results.py  data.yaml.example  evaluate_yolo.py  predict_yolo.py  prepare_dataset.py  train_yolo.py
backend/pubdata/: __init__.py  adapters.py  ingest.py  registry.py  service.py  store.py
backend/storage/models/: README.md
docs/: claude-code-tools-guide.html  mcp-servers.md  render_pdf.py
docs/notes/: 2026-06-17_작업노트.md  2026-06-26_주간작업노트_통합전후비교.md  README.md  공공데이터_API_연계_조사.md
prototypes/: README.md
prototypes/api-test/: .env.example  README.md  app.py  app_gemini.py  check_api.py  check_gemini.py
prototypes/image-understanding/: HOW_TO_DEV.md  app.py  backend_client.py  demo_mask.py  demo_real.py  demo_run.py  labeling.py  segmenter.py  stats.py  test_batch.py  test_labeling.py  test_load.py  test_manual_edit.py  test_segmentation.py  test_stats.py  yolo_detector.py
web/: README.md  index.html
web/assets/css/: agent.css  common.css  dashboard.css  data.css  labeling.css  login.css  projects.css  pubdata.css  query.css  rag.css  report.css
web/assets/js/: agent.js  common.js  dashboard.js  data.js  labeling.js  login.js  projects.js  pubdata.js  query.js  rag.js  report.js  reset.js
web/pages/: agent.html  dashboard.html  data.html  labeling.html  login.html  projects.html  pubdata.html  query.html  rag.html  report.html  reset.html
